--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
 	"prefix": "!",
-	"token": "OTgwOTMyNDAxMzczMDIwMTcx.G6TGVI.lFV1sDzT5ThqVQsbCcLj8keLXJCyPtg5yP8-iQ",
-	"owner": "314095628798001153",
-	"client_id": "980932401373020171",
-	"test_guild_id": "980763521191125044",
-	"newbie_channel_id": "981147064320806912",
-	"newbie_role_id": "981191688536096778"
+	"token": "MTAwNDc3MDIzNDU0NjI2MjA4Ng.GLpEAT.Ztqfc92hLSiC3R7RqTmJIw8iYavjXFv-HsghTs",
+	"owner": "458327992498913281",
+	"client_id": "1004770234546262086",
+	"test_guild_id": "1004426542916575422",
+	"newbie_channel_id": "1004427652255469578",
+	"newbie_role_id": "1004771512601038899"
 }
