--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
 	"prefix": "!",
-	"token": "MTAwNDc3MDIzNDU0NjI2MjA4Ng.G4C79q.9o03iYuQmt9yim6b_A5OvZmdzkyICja3fvb_Z8",
+	"token": "MTAwNDc3MDIzNDU0NjI2MjA4Ng.Gkok2Z.frH4GGU2c3vyq-A9daKZJ0GZvs7lrDQPECbN8c",
 	"owner": "458327992498913281",
 	"client_id": "1004770234546262086",
 	"test_guild_id": "1004426542916575422",
